# WebCrawler

./: a2a_main.py  api.py  chroma_kb.py  dashboard.py  main.py  pyproject.toml  requirements.txt
crawler/: __init__.py  config.py  cost_tracker.py  graph.py  models.py  state.py
crawler/agents/: __init__.py  a2a_pipeline.py
crawler/nodes/: __init__.py  intent_parser.py  mongo_logger.py  preprocessor.py  source_verifier.py  url_discovery.py  web_crawler.py
crawler/vector/: __init__.py  chroma_kb.py
